// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlbumDetail visual regression > matches the loaded-detail snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <article
      aria-label="Album tags"
      style="max-width: 1200px; margin: 0px auto; padding: 24px; display: flex; flex-direction: column; gap: 24px;"
    >
      <span
        class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
      >
        <h1>
          Kind of Blue
        </h1>
      </span>
      <div
        style="display: flex; gap: 16px; align-items: center; flex-wrap: wrap;"
      >
        <button
          class="astryx-button secondary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x17x4s8c x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
          data-size="md"
          data-testid="back-button"
          data-variant="secondary"
          type="button"
        >
          <span
            class="xjp7ctv"
          >
            <span
              class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-left astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                data-color="inherit"
                data-size="md"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 19-7-7 7-7"
                />
                <path
                  d="M19 12H5"
                />
              </svg>
            </span>
            <span
              class="xb3r6kr xlyipyv xeuugli"
            >
              Back
            </span>
          </span>
          <span
            aria-live="polite"
            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
            role="status"
          />
        </button>
        <button
          class="astryx-button primary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
          data-size="md"
          data-testid="edit-button"
          data-variant="primary"
          type="button"
        >
          <span
            class="xjp7ctv"
          >
            <span
              class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                data-color="inherit"
                data-size="md"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </span>
            <span
              class="xb3r6kr xlyipyv xeuugli"
            >
              Edit
            </span>
          </span>
          <span
            aria-live="polite"
            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
            role="status"
          />
        </button>
      </div>
      <section
        aria-labelledby="hero-album-title"
        data-testid="album-hero-header"
        style="display: grid; grid-template-columns: 1fr; gap: 24px; align-items: start;"
      >
        <div
          data-testid="hero-metadata"
          style="display: flex; flex-direction: column; gap: 8px;"
        >
          <p
            data-testid="hero-artist"
            style="margin: 0px;"
          >
            <span
              class="astryx-text large primary x1tgivj0 x18juvz8 xf74fhv x1lvx875 xt0psk2"
              data-color="primary"
              data-type="large"
            >
              Miles Davis
            </span>
          </p>
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
            data-testid="hero-album-title"
            id="hero-album-title"
          >
            Kind of Blue
          </h2>
          <span
            class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
            data-color="secondary"
            data-testid="hero-label-catalog"
            data-type="supporting"
          >
            Columbia - CL 1355
          </span>
          <span
            class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
            data-color="secondary"
            data-testid="hero-release-date"
            data-type="supporting"
          >
            1959
          </span>
          <ul
            aria-label="Genre tags"
            data-testid="hero-genre-chips"
            role="list"
            style="display: flex; flex-wrap: wrap; gap: 6px; padding: 0px; margin: 0px; list-style: none;"
          >
            <li
              role="listitem"
            >
              <span
                class="astryx-token gray sm x3nfvp2 x6s0dn4 xzye2dw xt970qd xc342km xng3xce xx3sua9 xjb2p0i x1ltkj2j x1e4wzip xuxw1ft x1hl2dhg x193iq5w xb3r6kr xzydfjl x141an7d xf314gf xspzpui xru1t7f"
                data-color="gray"
                data-size="sm"
              >
                <span
                  class="xb3r6kr xlyipyv xuxw1ft xeuugli"
                >
                  Jazz
                </span>
              </span>
            </li>
          </ul>
        </div>
      </section>
      <section
        aria-label="Tracks"
        data-testid="tracklist-section"
        style="padding: 16px 0px;"
      >
        <div
          style="display: flex; align-items: center; margin-bottom: 8px; gap: 8px;"
        >
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
          >
            Tracks
          </h2>
        </div>
        <div
          data-testid="tracklist-view"
          id="composer-credits-region"
          style="overflow-x: auto;"
        >
          <table
            aria-label="Tracks"
            style="border-collapse: collapse; width: 100%;"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Position
                  </span>
                </th>
                <th
                  scope="col"
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Title
                  </span>
                </th>
                <th
                  scope="col"
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Duration
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="track-view-row-track-0001"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    1
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0001"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        So What
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    9:25
                  </span>
                </td>
              </tr>
              <tr
                data-testid="track-view-row-track-0002"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    2
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0002"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        Freddie Freeloader
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    9:46
                  </span>
                </td>
              </tr>
              <tr
                data-testid="track-view-row-track-0003"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    3
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0003"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        Blue in Green
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    5:37
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
      <section
        aria-label="Album credits"
        aria-labelledby="album-credits-heading"
        data-testid="album-credits-section"
      >
        <div
          style="margin-bottom: 8px;"
        >
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
            id="album-credits-heading"
          >
            Credits
          </h2>
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 4px;"
        >
          <div
            data-testid="credit-row-composer"
            style="display: flex; gap: 8px; align-items: baseline;"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j x1e4wzip xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Composer
              :
            </span>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Miles Davis
            </span>
          </div>
          <div
            data-testid="credit-row-ensemble"
            style="display: flex; gap: 8px; align-items: baseline;"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j x1e4wzip xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Ensemble
              :
            </span>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Miles Davis Sextet
            </span>
          </div>
        </div>
      </section>
      <section
        aria-label="Discogs sync"
      >
        <div
          data-testid="sync-panel"
        />
      </section>
    </article>
  </div>
</div>
`;

exports[`AlbumDetail visual regression > matches the loaded-detail snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <article
      aria-label="Album tags"
      style="max-width: 1200px; margin: 0px auto; padding: 24px; display: flex; flex-direction: column; gap: 24px;"
    >
      <span
        class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
      >
        <h1>
          Kind of Blue
        </h1>
      </span>
      <div
        style="display: flex; gap: 16px; align-items: center; flex-wrap: wrap;"
      >
        <button
          class="astryx-button secondary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x17x4s8c x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
          data-size="md"
          data-testid="back-button"
          data-variant="secondary"
          type="button"
        >
          <span
            class="xjp7ctv"
          >
            <span
              class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-left astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                data-color="inherit"
                data-size="md"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 19-7-7 7-7"
                />
                <path
                  d="M19 12H5"
                />
              </svg>
            </span>
            <span
              class="xb3r6kr xlyipyv xeuugli"
            >
              Back
            </span>
          </span>
          <span
            aria-live="polite"
            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
            role="status"
          />
        </button>
        <button
          class="astryx-button primary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
          data-size="md"
          data-testid="edit-button"
          data-variant="primary"
          type="button"
        >
          <span
            class="xjp7ctv"
          >
            <span
              class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                data-color="inherit"
                data-size="md"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </span>
            <span
              class="xb3r6kr xlyipyv xeuugli"
            >
              Edit
            </span>
          </span>
          <span
            aria-live="polite"
            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
            role="status"
          />
        </button>
      </div>
      <section
        aria-labelledby="hero-album-title"
        data-testid="album-hero-header"
        style="display: grid; grid-template-columns: 1fr; gap: 24px; align-items: start;"
      >
        <div
          data-testid="hero-metadata"
          style="display: flex; flex-direction: column; gap: 8px;"
        >
          <p
            data-testid="hero-artist"
            style="margin: 0px;"
          >
            <span
              class="astryx-text large primary x1tgivj0 x18juvz8 xf74fhv x1lvx875 xt0psk2"
              data-color="primary"
              data-type="large"
            >
              Miles Davis
            </span>
          </p>
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
            data-testid="hero-album-title"
            id="hero-album-title"
          >
            Kind of Blue
          </h2>
          <span
            class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
            data-color="secondary"
            data-testid="hero-label-catalog"
            data-type="supporting"
          >
            Columbia - CL 1355
          </span>
          <span
            class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
            data-color="secondary"
            data-testid="hero-release-date"
            data-type="supporting"
          >
            1959
          </span>
          <ul
            aria-label="Genre tags"
            data-testid="hero-genre-chips"
            role="list"
            style="display: flex; flex-wrap: wrap; gap: 6px; padding: 0px; margin: 0px; list-style: none;"
          >
            <li
              role="listitem"
            >
              <span
                class="astryx-token gray sm x3nfvp2 x6s0dn4 xzye2dw xt970qd xc342km xng3xce xx3sua9 xjb2p0i x1ltkj2j x1e4wzip xuxw1ft x1hl2dhg x193iq5w xb3r6kr xzydfjl x141an7d xf314gf xspzpui xru1t7f"
                data-color="gray"
                data-size="sm"
              >
                <span
                  class="xb3r6kr xlyipyv xuxw1ft xeuugli"
                >
                  Jazz
                </span>
              </span>
            </li>
          </ul>
        </div>
      </section>
      <section
        aria-label="Tracks"
        data-testid="tracklist-section"
        style="padding: 16px 0px;"
      >
        <div
          style="display: flex; align-items: center; margin-bottom: 8px; gap: 8px;"
        >
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
          >
            Tracks
          </h2>
        </div>
        <div
          data-testid="tracklist-view"
          id="composer-credits-region"
          style="overflow-x: auto;"
        >
          <table
            aria-label="Tracks"
            style="border-collapse: collapse; width: 100%;"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Position
                  </span>
                </th>
                <th
                  scope="col"
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Title
                  </span>
                </th>
                <th
                  scope="col"
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text label primary x1tgivj0 xcr08ib x1kq96og xmhvcl5 xt0psk2"
                    data-color="primary"
                    data-type="label"
                  >
                    Duration
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="track-view-row-track-0001"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    1
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0001"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        So What
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    9:25
                  </span>
                </td>
              </tr>
              <tr
                data-testid="track-view-row-track-0002"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    2
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0002"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        Freddie Freeloader
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    9:46
                  </span>
                </td>
              </tr>
              <tr
                data-testid="track-view-row-track-0003"
              >
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 48px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    3
                  </span>
                </td>
                <td
                  style="text-align: left; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top;"
                >
                  <div>
                    <div
                      data-testid="track-view-title-track-0003"
                    >
                      <span
                        class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                        data-color="secondary"
                        data-type="supporting"
                      >
                        Blue in Green
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  style="text-align: right; padding: 4px 8px; border-bottom: 1px solid var(--color-border); vertical-align: top; width: 72px;"
                >
                  <span
                    class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
                    data-color="secondary"
                    data-type="supporting"
                  >
                    5:37
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
      <section
        aria-label="Album credits"
        aria-labelledby="album-credits-heading"
        data-testid="album-credits-section"
      >
        <div
          style="margin-bottom: 8px;"
        >
          <h2
            class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
            data-color="primary"
            data-level="2"
            id="album-credits-heading"
          >
            Credits
          </h2>
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 4px;"
        >
          <div
            data-testid="credit-row-composer"
            style="display: flex; gap: 8px; align-items: baseline;"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j x1e4wzip xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Composer
              :
            </span>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Miles Davis
            </span>
          </div>
          <div
            data-testid="credit-row-ensemble"
            style="display: flex; gap: 8px; align-items: baseline;"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j x1e4wzip xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Ensemble
              :
            </span>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Miles Davis Sextet
            </span>
          </div>
        </div>
      </section>
      <section
        aria-label="Discogs sync"
      >
        <div
          data-testid="sync-panel"
        />
      </section>
    </article>
  </div>
</div>
`;
